<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="resume_game">Resume Game</string>
    <string name="new_game">New Game</string>
    <string name="hight_score">High Score</string>
    <string name="how_to">How to</string>
    <string name="about">About</string>
    <string name="invite">Invite</string>
    <string name="play_with_me">Play with me: </string>
    <string name="share">Share</string>
    <!--  -->
    <string name="no_puzzles">No puzzles</string>
    <string name="one_puzzle">1 puzzle</string>
    <string name="n_puzzles">%s puzzles</string>
    <string name="all_solved">all solved</string>
    <string name="n_solved"> %s solved</string>
    <string name="n_unsolved"> %s unsolved</string>
    <string name="n_playing"> %s playing</string>
    <string name="solved">Solved</string>
    <string name="playing">Playing</string>
    <string name="not_started">Not started</string>
    <string name="puzzles_saved">Puzzles have been saved into \'%s\' folder.</string>
    <string name="no_puzzles_found">No puzzles found.</string>
    <string name="unknown_import_error">Unknown error occurred while importing puzzles, import was canceled.</string>
    <string name="invalid_format">Invalid format, import was canceled.</string>
    <string name="folders_created">%s folders have been imported.</string>
    <string name="hint">Hint</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="that_is_all">That\'s all</string>
    <string name="first_run_hint">There are several input modes which you can use to fill in the puzzle. In order to help you get familiar with these modes there will be several hints displayed as you go through them.\n</string>
    <string name="im_numpad_hint">You\'re now in the <i>Numpad</i> input mode. Press <i>Edit</i> button to toggle cell\'s note editing.\n</string>
    <string name="im_disable_modes_hint">Please remember that you don\'t have to use all input modes. You can disable any of them in the game settings.\n\nYou can also use the keyboard and trackball to control the game. If you want to enter notes using keyboard, press number with alt or shift.\n</string>
    <string name="help_text"><b>Keyboard controls</b>\n\nUse trackball to navigate to the desired cell and then press number on keyboard to fill in value. If you want to edit cell\'s note, press number with shift or alt.\n\n<b>Input modes</b>\n\nYou can switch between several input modes using button in the lower right corner of the screen. You can also disable any input mode in game settings - it will be completely hidden then.\n\n<b>Popup input mode</b>\n\nPopup dialog is shown when you tap the cell. You can edit cell\'s content using this dialog.\n\n<b>Single Number input mode</b>\n\nFirst select any number button by pressing it. Then just tap on cells in which you want to have selected number filled.\n\nUse <i>Pencil</i> button to toggle between cell\'s value and note editing.\n\n<b>Numpad input mode</b>\n\nButtons act as a standard numeric keyboard.\n\nUse <i>Pencil</i> button to toggle between cell\'s value and note editing.\n</string>
    <string name="numpad">Numpad</string>
    <string name="numpad_summary">Show numpad which acts as standard numeric keyobard.</string>
    <string name="numpad_abbr">Num\nPad</string>
    <string name="welcome">Welcome</string>
    <string name="undo">Undo</string>
    <string name="clear_all_notes">Clear all notes</string>
    <string name="fill_in_notes">Fill in notes</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle in %s.</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="well_done">Well Done!</string>
    <string name="clear_all_notes_confirm">Are you sure you want to clear all notes?</string>
    <string name="settings">Settings</string>
    <string name="game_settings">Game settings</string>
    <!-- Strings added/changed in 1.1.2 -->
    <string name="set_checkpoint">Set checkpoint</string>
    <string name="undo_to_checkpoint">Undo to checkpoint</string>
    <string name="undo_to_checkpoint_confirm">Are you sure you want to undo all actions since last checkpoint?</string>
    <string name="at_time">at %s</string>
    <string name="yesterday_at_time">yesterday at %s</string>
    <string name="on_date">on %s</string>
    <string name="last_played_at">Last played %s</string>
    <string name="created_at">Created %s</string>
    <string name="level">Level: %s </string>
    <string name="time">Time: %s</string>
    <string name="time_one">#1 - %s</string>
    <string name="time_two">#2 - %s</string>
    <string name="time_three">#3 - %s</string>
    <string name="beginner_level">Beginner</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="expert_level">Expert</string>
    <string name="legend_level">Legend</string>
    <string name="note">Note</string>
    <string name="howto">Fill in the grid so that every row, column, and 3x3 box contains digits 1 through 9</string>
    <string name="empty_sudoku">No puzzles. Please press back and try other lever </string>

</resources>