<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pis="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center|top"
    android:orientation="vertical" >

    <pis.android.sudoku.widget.TextViewWithFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="30dip"
        android:text="@string/app_name"
        android:textColor="@color/main_color"
        android:textSize="60dp"
        pis:textFont="hlfants1.ttf" />

    <pis.android.sudoku.widget.ButtonWithFont
        android:id="@+id/resume_game"
        style="@style/ButtonMainStyle"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:enabled="false"
        android:text="@string/resume_game"
        pis:textFont="hlcomic1.ttf" />

    <pis.android.sudoku.widget.ButtonWithFont
        android:id="@+id/new_game"
        style="@style/ButtonMainStyle"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/new_game"
        pis:textFont="hlcomic1.ttf" />

    <pis.android.sudoku.widget.ButtonWithFont
        android:id="@+id/high_score"
        style="@style/ButtonMainStyle"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/hight_score"
        pis:textFont="hlcomic1.ttf" />

    <pis.android.sudoku.widget.ButtonWithFont
        style="@style/ButtonMainStyle"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/help"
        pis:textFont="hlcomic1.ttf" />

    <pis.android.sudoku.widget.ButtonWithFont
        style="@style/ButtonMainStyle"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/about"
        pis:textFont="hlcomic1.ttf" />

</LinearLayout>